--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <section id="imagesSection">
     <img id="leftImage" src="" alt="" title="" />
-    <img id="rightCenter" src="" alt="" title="" />
+    <img id="imageCenter" src="" alt="" title="" />
     <img id="rightImage" src="" alt="" title="" />
   </section>
 
