--- a/index.html
+++ b/index.html
@@ -3,13 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Busmall</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+  <header>
+    <h1>Busmall</h1>
+    <img id="logo" src="MALL.png" alt="">
+    <nav>
+      <a href="index.html" target="_blank">Home</a>
+      <a href="index.html" target="_blank">About</a>
+      <a href="index.html" target="_blank">Contact</a>
+    </nav>
+  </header>
+  
 
   <section id="imagesSection">
+    <h2>Vote for our products</h2>
     <img id="leftImage" src="" alt="" title="" />
     <img id="imageCenter" src="" alt="" title="" />
     <img id="rightImage" src="" alt="" title="" />
