--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
   <ul id='summary'>
 
   </ul>
+  <canvas id="myChart" ></canvas>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
