--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Busmall</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="MALL.png">
+  <link ic>
 </head>
 <body>
   <header>
@@ -12,8 +14,8 @@
     <img id="logo" src="MALL.png" alt="">
     <nav>
       <a href="index.html" target="_blank">Home</a>
-      <a href="index.html" target="_blank">About</a>
-      <a href="index.html" target="_blank">Contact</a>
+      <a href="cartindex.html" target="_blank">order now</a>
+     <a href="cart.html">Cart</a><span id="itemCount"></span>
     </nav>
   </header>
   
